--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="container">
     <h1>Top 5 Apps That Pay You Real Money in 2025 💰</h1>
     <p>Discover how thousands of people from your country are earning easy money online. No experience needed. Start today and change your life!</p>
-    <a href="https://example.com" class="btn" target="_blank" rel="noopener noreferrer">Start Earning Now</a>
+    <a href="https://otieu.com/4/9403216" class="btn" target="_blank" rel="noopener noreferrer">Start Earning Now</a>
     <footer>Limited spots available • Start before 2025 ends</footer>
   </div>
 </body>
