--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Top 5 apps to earn real money online in 2025. No investment required. Start earning today!">
+  <meta name="robots" content="noindex, nofollow" />
   <title>Top 5 Apps That Pay You Real Money in 2025</title>
   <style>
     body {
@@ -11,15 +12,12 @@
       background: #f9f9f9;
       color: #222;
       margin: 0; padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
     .container {
       background: white;
-      padding: 30px 40px;
+      padding: 30px 20px;
       max-width: 400px;
+      margin: 60px auto;
       border-radius: 10px;
       box-shadow: 0 8px 25px rgba(0,0,0,0.1);
       text-align: center;
@@ -32,7 +30,7 @@
     p {
       font-size: 16px;
       margin-bottom: 30px;
-      line-height: 1.4;
+      line-height: 1.6;
     }
     .btn {
       background: #0b74de;
@@ -49,7 +47,7 @@
       background: #095ab8;
     }
     footer {
-      margin-top: 40px;
+      margin-top: 30px;
       font-size: 12px;
       color: #888;
     }
@@ -57,10 +55,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Top 5 Apps That Pay You Real Money in 2025 💰</h1>
-    <p>Discover how thousands of people from your country are earning easy money online. No experience needed. Start today and change your life!</p>
-    <a href="https://otieu.com/4/9403216" class="btn" target="_blank" rel="noopener noreferrer">Start Earning Now</a>
-    <footer>Limited spots available • Start before 2025 ends</footer>
+    <h1>Top 5 Apps To Earn Real Money in India in 2025 💰</h1> 
+    <p>Thousands are making money online from their phones! No skills needed. Just download & start earning in minutes.</p>
+    <a href="https://kuveb.online/top-5-apps-to-earn-real-money-in-india-in-2025/" class="btn" target="_blank" rel="noopener nofollow">Start Earning Now</a>
+    <footer>🚀 Limited spots • Don’t miss your 2025 breakthrough!</footer>
   </div>
 </body>
 </html>
