--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="container">
     <h1>Top 5 Apps To Earn Real Money in India in 2025 💰</h1> 
     <p>Thousands are making money online from their phones! No skills needed. Just download & start earning in minutes.</p>
-    <a href="https://kuveb.online/top-5-apps-to-earn-real-money-in-india-in-2025/" class="btn" target="_blank" rel="noopener nofollow">Start Earning Now</a>
+    <a href="https://www.profitableratecpm.com/n8ynmph1a?key=5689adc1fac827d7af55d753fc11a356" class="btn" target="_blank" rel="noopener nofollow">Start Earning Now</a>
     <footer>🚀 Limited spots • Don’t miss your 2025 breakthrough!</footer>
   </div>
 </body>
